(process) jspawnhelper should not use argv[0]

XMLWordPrintable

    • b03
    • Not verified

        Reported by jarabekit@gmail.com [1]

        jspawnhelper uses argv[0] to receive the fd string from the parent. That breaks with conventions and trips over certain tools like binfmt_misc.

        For details, see linked ML discussion.

        [1] https://mail.openjdk.org/pipermail/core-libs-dev/2023-June/107738.html

              Assignee:
              Thomas Stuefe
              Reporter:
              Thomas Stuefe
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: