8310265: (process) jspawnhelper should not use argv[0]

Reviewed-by: stuefe
Backport-of: 47d00a4cbeff5d757dda9c660dfd2385c02a57d7